[package]
name = "fut-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "^0.3"
async-trait = "^0.1"

tokio = { version = "^1", features = ["rt", "net", "io-util", "fs"], optional = true }
tokio-stream = { version = "^0.1", features = ["fs"], optional = true }
async-std = { version = "^1", features = ["unstable"], optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "macros"] }
async-std = { version = "^1", features = ["unstable"] }

[features]
default = []
tokio-rt = ["tokio", "tokio-stream"]
async-std-rt = ["async-std"]
