[package]
name = "fut-compat"
description = "Offers compatibility between the tokio and async_std runtimes."
version = "0.1.0"
authors = ["Denis Kerp"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/DKerp/fut-compat"
license = "MIT"
keywords = ["futures", "compatibility", "async", "tokio", "async-std"]
categories = ["asynchronous"]

[dependencies]
futures = "^0.3"
async-trait = "^0.1"

tokio = { version = "^1", features = ["rt", "net", "io-util", "fs"], optional = true }
tokio-stream = { version = "^0.1", features = ["fs"], optional = true }
async-std = { version = "^1", features = ["unstable"], optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "macros"] }
async-std = { version = "^1", features = ["unstable"] }

[features]
default = []
tokio-rt = ["tokio", "tokio-stream"]
async-std-rt = ["async-std"]
